--- a/configuration/Areas/Bathroom/configuration.yaml
+++ b/configuration/Areas/Bathroom/configuration.yaml
@@ -85,7 +85,9 @@ bathroom:
           {% set selfState = states('binary_sensor.bathroom_bright') %}
           {% set lightState = states('light.bathroom') %}
           {% set selfLastChanged = states.binary_sensor.bathroom_bright.last_changed %}
-          {% if lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
+          {% if threshold | int(0) == 0 %}
+            False
+          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
             True
           {% elif lux | int(0) > (threshold | int(0) * 3) %}
             True
@@ -96,6 +98,7 @@ bathroom:
           {% else %}
             False
           {% endif %}
+
 
       # Humid Sensors
       #----------------------------------#
