--- a/configuration/Areas/Entrance/configuration.yaml
+++ b/configuration/Areas/Entrance/configuration.yaml
@@ -54,7 +54,9 @@ entrance:
           {% set selfState = states('binary_sensor.entrance_bright') %}
           {% set lightState = states('light.entrance') %}
           {% set selfLastChanged = states.binary_sensor.entrance_bright.last_changed %}
-          {% if lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
+          {% if threshold | int(0) == 0 %}
+            False
+          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
             True
           {% elif lux | int(0) > (threshold | int(0) * 3) %}
             True
