--- a/configuration/Areas/Kitchen/configuration.yaml
+++ b/configuration/Areas/Kitchen/configuration.yaml
@@ -18,12 +18,6 @@ kitchen:
           to_state: "on"
 
         - platform: "state"
-          entity_id: binary_sensor.kitchen_person_occupancy
-          prob_given_true: 0.2131280
-          prob_given_false: 0.0014052
-          to_state: "on"
-
-        - platform: "state"
           entity_id: binary_sensor.kitchen_hob
           prob_given_true: 0.4288289
           prob_given_false: 0.0020524
@@ -102,7 +96,9 @@ kitchen:
           {% set selfState = states('binary_sensor.kitchen_bright') %}
           {% set lightState = states('light.kitchen') %}
           {% set selfLastChanged = states.binary_sensor.kitchen_bright.last_changed %}
-          {% if lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
+          {% if threshold | int(0) == 0 %}
+            False
+          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
             True
           {% elif lux | int(0) > (threshold | int(0) * 3) %}
             True
