--- a/configuration/Areas/Toilet/configuration.yaml
+++ b/configuration/Areas/Toilet/configuration.yaml
@@ -48,7 +48,9 @@ toilet:
           {% set selfState = states('binary_sensor.toilet_bright') %}
           {% set lightState = states('light.toilet') %}
           {% set selfLastChanged = states.binary_sensor.toilet_bright.last_changed %}
-          {% if lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
+          {% if threshold | int(0) == 0 %}
+            False
+          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
             True
           {% elif lux | int(0) > (threshold | int(0) * 3) %}
             True
