--- a/configuration/System/recorder.yaml
+++ b/configuration/System/recorder.yaml
@@ -7,100 +7,103 @@ records:
     db_url: !secret mariadb
     purge_keep_days: 365
     auto_purge: true
-    exclude:
-      entity_globs:
-        - .*_1
-        - .*_2
-        - .*_3
-        - .*_4
-        - .*_5
-        - .*_6
-        - sensor.date*
-        - .*_ratio*
-        - .*_battery*
-        - .*_cpu*
-        - .*_memory*
-        - .*_disk*
-        - .*_ram*
-        - .*_memory*
-      domains:
-        - update
-        - automation
-        - calendar
-        - camera
-      event_types:
-        - service_removed
-        - service_executed
-        - platform_discovered
-        - feedreader
-        - service_registered
-        - call_service
-        - component_loaded
-        - logbook_entry
-        - system_log_event
-        - automation_triggered
-        - script_started
-        - timer_out_of_sync
-    include:
-      entity_globs:
-        - sensor.*temperature
-        - sensor.*humidity
-        - sensor.*illuminance
-        - sensor.*particulate*
-        - sensor.*probability
-        - sensor.*energy*
-        - sensor.*power*
-        - sensor.*wh*
-        - sensor.*cost*
-        - binary_sensor.*occupancy
-        - .*laura*
-        - .*seb_*
-        - sensor.starrunner_*
-        - binary_sensor.starrunner_*
-        - binary_sensor.*_occupied
-        - sensor.*electricity*
-        - sensor.*gas*
-        - sensor.*_wh*
-        - .*starrunner_active*
-        - .*_online*
-        - .*_home*
-        - .*_windows*
-        - .*_doors*
-        - .*_motion
-        - .*_noise
-        - .*_smoke
-        - .*_gas
-        - .*_water
-        - .*_presence
-        - .*_occupancy
-        - .*_bright
-        - .*_trend*
-        - .*sleep*
-        - .*_rssi*
-        - .*_heatindex
-        - .*_dewpoint
-        - .*_frostpoint
-        - .*_simmerindex
-        - .*co2*
-        - .*double_take*
-        - .*_person_count
-        - .*_dog_count
-        - .*_all_count
-        - .*ibeacon*
-        - .*_percentage
-        - .*reminder*
-      domains:
-        - person
-        - device_tracker
-        - light
-        - fan
-        - climate
-        - group
-        - switch
-        - input_boolean
-        - input_number
-        - media_player
-        - zone
+    # exclude:
+    #   entity_globs:
+    #     - sensor.*_1
+    #     - sensor.*_2
+    #     - sensor.*_3
+    #     - sensor.*_4
+    #     - sensor.*_5
+    #     - sensor.*_6
+    #     - sensor.date*
+    #     - sensor.*_ratio*
+    #     - sensor.*_battery*
+    #     - sensor.*_cpu*
+    #     - sensor.*_memory*
+    #     - sensor.*_disk*
+    #     - sensor.*_ram*
+    #     - sensor.*_memory*
+    #   domains:
+    #     - update
+    #     - automation
+    #     - calendar
+    #     - camera
+    #   event_types:
+    #     - service_removed
+    #     - service_executed
+    #     - platform_discovered
+    #     - feedreader
+    #     - service_registered
+    #     - call_service
+    #     - component_loaded
+    #     - logbook_entry
+    #     - system_log_event
+    #     - automation_triggered
+    #     - script_started
+    #     - timer_out_of_sync
+    # include:
+    #   entity_globs:
+    #     - sensor.*temperature
+    #     - sensor.*humidity
+    #     - sensor.*illuminance
+    #     - sensor.*particulate*
+    #     - sensor.*probability
+    #     - sensor.*energy*
+    #     - sensor.*power*
+    #     - sensor.*wh*
+    #     - sensor.*cost*
+    #     - binary_sensor.*occupancy
+    #     - sensor.*laura*
+    #     - binary_sensor.*laura*
+    #     - sensor.*seb*
+    #     - binary_sensor.*seb*
+    #     - sensor.starrunner_*
+    #     - binary_sensor.starrunner_*
+    #     - binary_sensor.*_occupied
+    #     - sensor.*electricity*
+    #     - sensor.*gas*
+    #     - sensor.*_wh*
+    #     - binary_sensor.*starrunner_active*
+    #     - binary_sensor.*_online*
+    #     - binary_sensor.*_home*
+    #     - binary_sensor.*_windows*
+    #     - binary_sensor.*_doors*
+    #     - bonary_sensor.*_motion
+    #     - sensor.*_noise
+    #     - sensor.*_smoke
+    #     - sensor.*_gas
+    #     - sensor.*_water
+    #     - binary_sensor.*_presence
+    #     - binary_sensor.*_occupancy
+    #     - binary_sensor.*_bright
+    #     - sensor.*_trend*
+    #     - binary_sensor.*sleep*
+    #     - sensor.*sleep*
+    #     - sensor.*_rssi*
+    #     - sensor.*_heatindex
+    #     - sensor.*_dewpoint
+    #     - sensor.*_frostpoint
+    #     - sensor.*_simmerindex
+    #     - sensor.*co2*
+    #     - sensor.*double_take*
+    #     - sensor.*_person_count
+    #     - sensor.*_dog_count
+    #     - sensor.*_all_count
+    #     - sensor.*ibeacon*
+    #     - binary_sensor.*_percentage
+    #     - sensor.*reminder*
+    #   domains:
+    #     - person
+    #     - device_tracker
+    #     - light
+    #     - fan
+    #     - climate
+    #     - group
+    #     - switch
+    #     - input_boolean
+    #     - input_number
+    #     - media_player
+    #     - zone
   # influxdb:
   #   host: a0d7b954-influxdb
   #   port: 8086
